src/app/views/home-page/home-page.component.less
@import "../../common.less";

#home-container {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: top center ;

    @media screen and (max-width: @mobile-max-width) {
      background-size: calc(@mobile-max-width * 1.3);
    }

    width: 100%;
    height: 100%;
}

#play-for-free-button {
  display: flex;
  flex-direction: column;
  height: 750px;
  align-items: center;
  justify-content: center;

  img {
    width: 50%;
    padding-bottom: 50px;

    @media screen and (max-width: @mobile-max-width) {
      width: 70%;
      padding-bottom: 0;
    }
  }

  .play-button:hover {
      background-color: rgba(0, 0, 0, 0.9);
  }

  @media screen and (max-width: @mobile-max-width) {
    height: 200px;
  }
}

#gallery {
  height: fit-content;
  background-repeat: no-repeat;
  background-size: cover;

  #gallery-container {
    width: 100%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.6);
  }

  rtp-gallery {
    display: flex;
    justify-content: center;
    align-items: center;
  }
}

.header {
  color: white;
  font-size: 40px;
  text-align: center;
  font-family: 'Luckiest Guy', cursive;
  padding: 20px 0 20px 0;
}

#introduction {
    height: 500px;
    background: rgb(0,0,0);
    background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 95%, rgba(0,0,0,0) 100%);
    display: flex;
    flex-direction: column;
    justify-content: center;

    .text-container {
      text-align: center;
      font-size: 36px;
      margin: 0 10px 0 10px;

      @media screen and (max-width: @mobile-max-width) {
        font-size: 16px;
      }
    }

  .more-below {

    mat-icon {
      font-size: 40px;
      width: 40px;
      height: 40px;
    }
    text-align: center;
  }

  @media screen and (max-width: @mobile-max-width) {
    height: 200px;
  }
}

.intro-bottom-gradient {
  height: 30px;
  background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 95%, rgba(0,0,0,1) 100%);
}

.intro-top-gradient {
  height: 30px;
  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 5%, rgba(0,0,0,0) 100%);
}

#about-game {
  text-align: right;
  font-size: 36px;

  @media screen and (max-width: @mobile-max-width) {
    font-size: 16px;
  }


  .about-game-container {
    display: flex;
    align-items: center;

    @media screen and (max-width: @mobile-max-width) {
      flex-direction: column;
      text-align: center;
    }

    .text-container {
      flex-grow: 1;
      margin-right: 20px;

      p {
        padding-bottom: 30px;
        line-height: 40px;
      }

      @media screen and (max-width: @mobile-max-width) {
        font-size: 16px;
        margin-left: 10px;
        margin-right: 10px;
      }
    }

    .image-container {
      display: flex;
      align-items: center;
      justify-content: center;

      padding-bottom: 40px;
      img {
        width: 70%;
        border-radius: 10px;
        transform: scaleX(-1);
      }
    }
  }
}

.button-container {
  display: flex;
  gap: 24px;
  margin-top: 100px;
  justify-content: center;

  @media screen and (max-width: @mobile-max-width) {
    margin-top: 0;
    gap: 12px;
    flex-direction: column;
    align-items: center;
  }

  button {
    color: white;
    font-size: 32px;
    height: 64px;
    width: 256px;

    @media screen and (max-width: @mobile-max-width) {
      height: 40px;
      font-size: 20px;
      width: 50%;
    }

    ::ng-deep .mdc-button__label {
      width: 100%;
      display: flex;
      align-items: center;
      justify-content: flex-start;

      img {
        width: 48px;
        height: 48px;
        padding-left: 20px;
        padding-right: 15px;

        @media screen and (max-width: @mobile-max-width) {
          width: 32px;
          height: 32px;
        }
      }
    }
  }

  .discord-button {
    background-color: #5865F2;
  }

  .patreon-button {
    background-color: #FF424D;
  }
}

